new create show for exercises

--- a/fitness-app/views/workouts/index.ejs
+++ b/fitness-app/views/workouts/index.ejs
@@ -10,7 +10,7 @@
     <br> 
     <div>List of workouts below</div> <br>
     <% workouts.forEach(workout => { %>
-      Name: <%= workout.name %>
+      Name: <%= workout.title %>
       <br>
       <%= workout.date %>
       <br>
