--- a/fitness-app/views/workouts/new.ejs
+++ b/fitness-app/views/workouts/new.ejs
@@ -8,7 +8,7 @@
     <h1> Add New Workout </h1>
     <br>
     <form action="/workouts" method="POST">
-        Workout Name: <input type="text" name="name">
+        Workout Name: <input type="text" name="title">
         <br>
         Date: <input type="date" name="date">
         <br><br>
