--- a/fitness-app/views/workouts/index.ejs
+++ b/fitness-app/views/workouts/index.ejs
@@ -16,7 +16,10 @@
       <br>
       <%= workout._id %>
       <br>
-      <a href="/workouts/<%=workout.id%>">Workout Details</a> <br> <br>
+      <a href="/workouts/<%=workout.id%>">Workout Details</a> <br> 
+      <form action="/workouts/<%= workout.id %>?_method=DELETE" method="POST">
+        <input type="submit" value="DELETE">
+      </form> <br><br>
     <% }) %> 
   </body>
 </html>
