--- a/fitness-app/views/workouts/index.ejs
+++ b/fitness-app/views/workouts/index.ejs
@@ -19,7 +19,11 @@
       <a href="/workouts/<%=workout.id%>">Workout Details</a> <br> 
       <form action="/workouts/<%= workout.id %>?_method=DELETE" method="POST">
         <input type="submit" value="DELETE">
-      </form> <br><br>
+      </form> <br>
+      <form action="/workouts/<%= workout.id %>/edit" method="GET">
+        <input type="submit" value="EDIT NAME / DATE">
+      </form> 
+      <br> <br>
     <% }) %> 
   </body>
 </html>
