css to landing page

--- a/fitness-app/views/workouts/index.ejs
+++ b/fitness-app/views/workouts/index.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> <%= title %> </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<%- include('../partials/header') %>
+
     <h1> Workout index page </h1>
     <p>Click <a href="/workouts/new">here</a> to add workout</p>
     <br> 
