--- a/fitness-app/public/stylesheets/style.css
+++ b/fitness-app/public/stylesheets/style.css
@@ -1,9 +1,69 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: rgb(138, 126, 109);
+  padding: 0px;
+  margin:auto;
+  font-family: 'PT Sans Narrow', sans-serif;
+  background-color: #00B38A;
+  background-color: #007D58;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 88px 1fr;
+  color: #D3EAE8;
 }
 
-a {
-  color: #00B7FF;
+nav {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  background-color: #373E63;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #5DECBF;
+  font-size: 30px;
+}
+
+.gym {
+  color: #D3EAE8;
+} 
+
+h1 {
+  display: flex;
+}
+
+nav > img {
+  height: 75px;
+}
+
+.start-button {
+  color: #D3EAE8;
+  text-decoration: none;
+  font-size: 26px;
+}
+
+.start-button:hover {
+  background-color: #00B38A;
+  color: #373E63;
+}
+
+.start-button {
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  align-items: center;
+  width: 200px;
+  border-radius: 10px;;
+}
+
+.landing {
+  display: flex;
+  justify-self: center;
+  margin: 40px;
+  font-size: 24px;
+  width: 500px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.logo {
+  
 }
