--- a/fitness-app/views/partials/header.ejs
+++ b/fitness-app/views/partials/header.ejs
@@ -7,11 +7,6 @@
   </head>
   <body>
     <nav>
-      <img src="/images/logo.png">
+      <img src="/images/logo.png" class="logo">
       <h1>  <div class="gym">GYM</div><div class="dolphin">DOLPHIN</div> </h1>
     </nav>
-      <div class="landing">Welcome to GymDolphin <br> <br> A quick and easy way to schedule your workouts <br> Click below to get started! </div>
-      <br>
-      <a href="/workouts" class="start-button">GO TO WORKOUTS</a>
-  </body>
-</html>
