--- a/fitness-app/views/workouts/new.ejs
+++ b/fitness-app/views/workouts/new.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> <%= title %> </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<%- include('../partials/header') %>
+
+
     <h1> Add New Workout </h1>
     <br>
     <form action="/workouts" method="POST">
