--- a/fitness-app/public/stylesheets/style.css
+++ b/fitness-app/public/stylesheets/style.css
@@ -1,13 +1,20 @@
 body {
   padding: 0px;
   margin:auto;
+  font-size: 24px;;
   font-family: 'PT Sans Narrow', sans-serif;
   background-color: #00B38A;
   background-color: #007D58;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 88px 1fr;
   color: #D3EAE8;
+}
+
+a {
+  text-decoration: none;
+  color: #D3EAE8;
+}
+
+.active {
+  color: #5DECBF;
 }
 
 nav {
@@ -29,13 +36,21 @@ h1 {
   display: flex;
 }
 
+nav > div > a:hover {
+  background-color: #57507B;
+  color: #5DECBF;
+}
+
+nav > div > a {
+  text-align: center;
+}
+
 nav > img {
   height: 75px;
 }
 
 .start-button {
   color: #D3EAE8;
-  text-decoration: none;
   font-size: 26px;
 }
 
@@ -47,23 +62,90 @@ nav > img {
 .start-button {
   display: flex;
   justify-content: center;
-  justify-self: center;
   align-items: center;
   width: 200px;
   border-radius: 10px;;
+  padding: 15px;
+  margin: auto;
 }
 
 .landing {
   display: flex;
-  justify-self: center;
-  margin: 40px;
+  margin: auto;
   font-size: 24px;
   width: 500px;
   align-items: center;
   text-align: center;
   justify-content: center;
+  padding: 50px;
 }
 
-.logo {
-  
+.nav-bar {
+  justify-content: space-between;
+  height: 90px;
+}
+
+#new {
+  align-self: center;
+}
+
+.links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 40vw;
+  gap: 50px;
+}
+
+.links > * {
+  padding: 15px;
+  border-radius: 15px;
+}
+
+.workouts {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  top: 25px;
+  background-color: #5DECBF;
+  color: #373E63;
+  padding: 15px;
+  width: 300px;
+  border-radius: 15px;
+}
+
+.workouts:hover {
+  background-color: #57507B;
+  color: #5DECBF;
+  cursor: pointer;
+  box-shadow: 4px 4px 2px #373E63;
+}
+
+.delete, .edit {
+  display: flex;
+  justify-content: center;
+  padding: 2px;
+  height: 25px;
+  width: 25px;
+  position: relative;
+  top: -33px;
+  left: 200px;
+  margin: auto;
+}
+
+input[type=submit] {
+  background-color: #5DECBF;
+  color: #373E63;
+  border-radius: 5px;
+}
+
+input[type=submit]:hover {
+  color: #5DECBF;
+  background-color: #373E63;
+  box-shadow: 4px 4px 2px #373E63;
+  cursor: pointer;
+}
+
+.space {
+  height: 0;
 }
