--- a/fitness-app/views/workouts/show.ejs
+++ b/fitness-app/views/workouts/show.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> <%= workout.title %> </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<%- include('../partials/header') %>
+
     <h1> show workout page </h1>
     <br>
     <div><%= workout.date %></div>
