--- a/fitness-app/views/workouts/index.ejs
+++ b/fitness-app/views/workouts/index.ejs
@@ -21,8 +21,8 @@
     <% }) %> 
     </div>
     <% } else { %>
-      <div class="no-workouts">
-        No Workouts Yet!
+    <div class="no-workouts">
+        No Workouts Yet! <br> <br> Click new workout to get started!
     </div>
   <% } %>
 </div>
