--- a/fitness-app/views/exercises/new.ejs
+++ b/fitness-app/views/exercises/new.ejs
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> <%= title %> </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<%- include('../partials/header2') %>
+
     <h1> Add New Exercise </h1>
-    <br>
-    <form action="/workouts/<%=id%>/exercises" method="POST">
+    <form action="/workouts/<%=workout.id%>/exercises" method="POST" class="form">
+      <div class="insert-page">
         Exercise Name: <input type="text" name="name">
+      </div>
+      <div class="insert-page">
+        # of Sets: <input type="number" name="sets" min="1">
+      </div>
+      <div class="insert-page">
+        # of Reps: <input type="number" name="reps" min="1">
+      </div>
+        Notes: 
+        <textarea name="note" id="note"></textarea>
         <br>
-        Number of Sets: <input type="number" name="sets" min="1">
-        <br>
-        Number of Reps: <input type="number" name="reps" min="1">
-        <br>
-        Notes: <input type="text" name="note">
-        <br><br>
-        <input type="submit">
+      <div class="update-button">
+        <input type="submit" value="Add" id="update-button">
+      </div>
     </form>
   </body>
 </html>
