--- a/fitness-app/views/partials/header.ejs
+++ b/fitness-app/views/partials/header.ejs
@@ -7,9 +7,11 @@
   </head>
   <body>
     <nav class="nav-bar">
-    <img src="/images/logo.png">
+      <div id="side-bar">
+        <img src="/images/logo.png">
+    </div>    
     <div class="links">
-        <a href="/workouts" id="upcoming" <%- title === 'Upcoming Workouts' ? 'class="active"' : '' %>>UPCOMING WORKOUTS</a> 
+        <a href="/workouts" id="upcoming" <%- title === 'Workouts' ? 'class="active"' : '' %>>WORKOUTS</a> 
         <a href="/workouts/new" id="new" <%- title === 'New Workout' ? 'class="active"' : '' %>>+ NEW WORKOUT</a> 
     </div>
     </nav>
