--- a/fitness-app/views/workouts/new.ejs
+++ b/fitness-app/views/workouts/new.ejs
@@ -7,7 +7,7 @@
         Workout Name: <input type="text" name="title" class="input-workout">
       </div>
       <div class="insert-page">
-        Date: <input type="date" name="date" class="input-workout">
+        Date: <input required type="date" name="date" class="input-workout">
       </div> <br>
       <div class="update-button">
         <input type="submit">
