--- a/fitness-app/views/workouts/edit.ejs
+++ b/fitness-app/views/workouts/edit.ejs
@@ -6,13 +6,14 @@
     Workout Name: <input type="text" name="title" class="input-workout" value="<%=workout.title%>">
   </div>
   <div class="insert-page">
-    Date: <input type="date" name="date" class="input-workout" value="<%=workout.date%>">
+    Date: <input required type="date" name="date" class="input-workout" value="<%= workout.date.toISOString().substring(0,10) %>">
   </div> <br>
   <div class="update-button">
     <input type="submit">
   </div>
   </div>
 </form>
+
 </body>
 </html>
 
